# ztools

./: .gitignore  CMakeLists.txt  README.md  config.h  main.c
include/: c.h  closestream.h  debug.h  list.h  nls.h  optutils.h  pathnames.h  strutils.h  sysfs.h  xalloc.h
libsmartcols/src/: libsmartcols.h  smartcolsP.h
linux/process/: lesson01.c  lesson02.c
misc-utils/: CMakeLists.txt  lsblk.c
